--- a/style/reposive.css
+++ b/style/reposive.css
@@ -1,2 +1,73 @@
 
+@media screen and (max-width: 780px) {
+    .header-top {
+        display: none;
+    }
 
+    .header-bar {
+        display: block;
+    }
+    .header-navbar {
+        display: none;
+    }
+
+    .header-navbar.open {
+        display: block;
+    }
+
+    .header-navbar .header-navbar__list {
+        display: block;
+    }
+
+    .header-navbar__item .header-subnav__list {
+        /* visibility: visible; */
+        display: none;
+        opacity: 100;
+        position: static;
+        /* transition: none; */
+    }
+
+    .header-navbar .header-navbar__item:hover .header-subnav__list {
+        margin-top: 0px;
+    }
+
+    .header-navbar .header-navbar__item::after {
+        display: none;
+    }
+
+    .header-navbar .header-navbar__item:hover .header-navbar__item--link {
+        animation: none;
+    }
+
+    .header-navbar .header-navbar__item {
+        transition: 0.8s;
+    }
+
+    .header-navbar .header-navbar__item--link {
+        display: block;
+    }
+
+    .header-navbar .header-navbar__item:hover .header-navbar__item--link {
+        background-color: #e5e5e5;
+    }
+
+    .header-navbar__item .header-subnav__list {
+        width: 100%;
+    }
+
+    .header-subnav__list.open{
+        display: block;
+    }
+
+    .header-navbar__item .header-subnav__list {
+        visibility: visible;
+    }    
+
+    .header-navbar .header-navbar__item--link {
+        padding: 10px 10px;
+    }
+
+    .header-bar .hiddennav {
+        display: block;
+    }
+}
