--- a/style/style.css
+++ b/style/style.css
@@ -82,17 +82,25 @@ html {
   
 }
 
+.header-left {
+    width: 210px;
+    height: 60px;
+    /* padding: 10px 0px; */
+}
+
 .header-left .header-left__logo {
     width: 100%;
     height: 100%;
     background-color: #dc3545;
+    text-align: center;
 }
 
-.header-left {
-    width: 210px;
-    height: 60px;
-    padding: 10px 0px;
+.header-left .header-left__logo p{
+    font-size: 20px;
+    line-height: 60px;
 }
+
+
 
 .header-navbar .header-navbar__list {
     display: flex;
