--- a/style/style.css
+++ b/style/style.css
@@ -268,8 +268,8 @@ html {
 .banner {
     width: 100%;
     height: 350px;
-    background-color: aquamarine;
-    font-size: 100px;
+    background-color: #dc3545;
+    font-size: 70px;
     text-align: center;
 }
 
