--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    height: 1000vh;
+    /* height: 1000vh; */
 }
 
 html {
@@ -318,6 +318,17 @@ dl, ol, ul {
     margin: 0 10px;
 }
 
+.product__item--link {
+    display: block;
+    color: black;
+    text-decoration: none;
+}
+
+.product__item--link:hover {
+    color: black;
+    
+}
+
 .product__item img {
     width: 100%;
 }
@@ -326,4 +337,48 @@ dl, ol, ul {
     font-size: 1.4rem;
     text-align: center;
     padding: 10px 0;
+}
+
+#footer {
+    /* background-image: linear-gradient(60deg,#e6dde0,#d8d0d2); */
+    background-color: #eeece4;
+    padding: 0 20px;
+}
+
+#footer .company__name {
+    padding-bottom: 15px;
+    font-size: 1.8rem;
+}
+
+#footer .footer-top {
+    border-bottom: 1px solid #ccc;
+}
+
+#footer .container__text {
+    padding: 20px 0;
+}
+
+#footer .footer-top .footer-top__text {
+    font-size: 2.5rem;
+    font-weight: 500;
+    padding: 20px 0;
+}
+
+#footer .footer__text {
+    font-size: 1.6rem;
+}
+
+.coppyright {
+    background-image: linear-gradient(60deg,#dc3545,#bd3655);
+}
+
+.coppyright p{
+    padding: 10px 0;
+    text-align: center;
+    text-transform: none;
+}
+
+.coppyright strong {
+    text-transform: uppercase;
+
 }
